# corgo-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
scripts/: set-up-env-vars.ps1
src/ecs/: components.h  relationships.h  systems.h
src/engine/: assets.h  components.h  config.h  corgo.h  input_actions.h  scenes.h
src/engine/components/: input.c
src/engine/core/: init.c  scene.h
src/game/: config.h  input_actions.h  scenes.h
src/samples/: assets.h  components.h  config.h  input_actions.h  relationships.h  scenes.h
src/samples/input/: sample.c
src/samples/scenes/: crank_demo.c  input_demo.c  sample_menu.c  sprite_demo.c  text_scroller.c  text_scroller2.c
src/utils/: helpers.h
